Under Docker all is fine also :((

--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "scripts": {
     "node:a": "DEBUG=libp2p:* node ipfs-node-a.js",
-    "node:b": "DEBUG=libp2p:* node ipfs-node-b.js"
+    "node:b": "DEBUG=libp2p:* node ipfs-node-b.js",
+    "docker:node:a": " docker build -f node-a.dockerfile -t node-a .",
+    "docker:node:b": " docker build -f node-b.dockerfile -t node-b ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ipfs-core": "~0.5.2",
     "ipfs-http-client": "~49.0.3",
-    "ipfs-http-server": "^0.5.0"
+    "ipfs-http-server": "^0.5.0",
+    "serve": "^12.0.0"
   },
   "description": ""
 }
